--- a/index.html
+++ b/index.html
@@ -13,14 +13,23 @@
         <div class="banner">
             <div class="banner-content">
                 <h1 class="banner-title">Let's make<br>beautiful flowers a<br>part of your life.</h1>
-                <p class="banner-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <p class="banner-description">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has
+                    a more-or-less normal distribution of letters.</p>
                 <button class="btn-primary">Shop Now</button>
             </div>
-            <img class="banner-picture" src="Flower Asset/pngwing 10.png" alt="red flower">
-
         </div>
     </header>
-    <main></main>
+    <main class="deal-main">
+        <div class="deal">
+            <div class="deal-content">
+                <h1 class="deal-title">Hot Deal ! Sale Up To 25% <span class="span-color">Off</span></h1>
+                <p class="deal-description">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <button class="btn-sign-up">Sign Up</button>
+        
+
+        </section>
+    </main>
     <footer></footer>
 
 </body>
