update footer section

--- a/index.html
+++ b/index.html
@@ -71,19 +71,24 @@
 
         </section>
 
+        <section>
+            <div class="footer-container">
+  
+              <h1 class="footer-title"><span class="color">Flower</span>Shop</h1>
+              <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+  
+          </div>
+          <div>
+              <p class="copy">
+                  <small>&copy;2020-2023, FlowerShop.com. All rights reserved. </small>
+                </p>
+          </div>
+        </section>
+
     </main>
+
     <footer>
-        <div class="footer-container">
-
-            <h1 class="footer-title"><span class="color">Flower</span>Shop</h1>
-            <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-
-        </div>
-        <div>
-            <p class="copy">
-                <small>&copy;2020-2023, FlowerShop.com. All rights reserved. </small>
-              </p>
-        </div>
+      
     </footer>
 
 </body>
