update footer design

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
         </section>
 
-        <section>
+        <section class="footer">
             <div class="footer-container">
   
               <h1 class="footer-title"><span class="color">Flower</span>Shop</h1>
-              <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              <p class="footer-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
   
           </div>
           <div>
